# ChangeLog for dev-ruby/googlecharts
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*googlecharts-1.6.7 (19 Jun 2011)

  19 Jun 2011; Hans de Graaff <graaff@gentoo.org> +googlecharts-1.6.7.ebuild:
  Version bump.

  19 Jun 2011; Hans de Graaff <graaff@gentoo.org> -googlecharts-1.6.0.ebuild:
  Remove old version.

*googlecharts-1.6.1 (07 Mar 2011)

  07 Mar 2011; Hans de Graaff <graaff@gentoo.org>
  +googlecharts-1.6.1.ebuild:
  Version bump.

*googlecharts-1.6.0 (13 Jul 2010)

  13 Jul 2010; Hans de Graaff <graaff@gentoo.org>
  +googlecharts-1.6.0.ebuild, +metadata.xml:
  Initial import. Optional dependency for metric_fu.
