@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST googlecharts-1.6.1.gem 52736 RMD160 24b18c83d2efd017ceb42fe5fc9a1e4e904487c7 SHA1 7e7469647e12c1560bdf06416e04ddcf1ace506d SHA256 3bd317f552acfe77a26f552ac03eb512b9266a5801b66218a0ad46bd8982f9b9
 DIST googlecharts-1.6.7.gem 22016 RMD160 cc1028a438cf77c867fb1f1a958f4d2d799a5e53 SHA1 fa878906b3557c4a986a36e14ee900ed7249f49a SHA256 aa921ac2baecad8ca8f759dd49fbad881906512ba8b019511fa5a47e99b07799
+DIST googlecharts-1.6.8.gem 22016 RMD160 6606ae94b87e2289524b4ea2bd8f1cbda2bb7a2e SHA1 24d4677f2739c50085f07c57676818d2402e684f SHA256 07297ffc748a9b36b9d6f2218a87e2fb09ed1ce7bf6b5a11043b1ca58e417bd0
 EBUILD googlecharts-1.6.1.ebuild 631 RMD160 b2552c019fd9c9c85b94fed396537e271ef910ba SHA1 9cbddf1d477ab007d279cb26fe6a21e19ac2b7bc SHA256 c1c1c2623a4304a123f0613270ee36ff7b96bbd381cb675cfae442e71e3633c5
 EBUILD googlecharts-1.6.7.ebuild 757 RMD160 c6c321185f91743e74c31382b9125b29ecf13c3a SHA1 ac9c10e2170fd273a79eafefdcbadecd003923d0 SHA256 2f2641b6a00b0b0422696abdd1eab7eeb954f6c41a0c8afcd78b925a81205c10
-MISC ChangeLog 669 RMD160 89b56d0fee984c431482751755a1468faca067ff SHA1 c4cd58bde0ed8f5df69dd3839ee5d9f5ba36a313 SHA256 6af3849e604f65e363ab66bba354e418826a62493852bd6c5ca30dd9eb127afe
+EBUILD googlecharts-1.6.8.ebuild 757 RMD160 c6c321185f91743e74c31382b9125b29ecf13c3a SHA1 ac9c10e2170fd273a79eafefdcbadecd003923d0 SHA256 2f2641b6a00b0b0422696abdd1eab7eeb954f6c41a0c8afcd78b925a81205c10
+MISC ChangeLog 799 RMD160 51f0787c0e186d6bf577058a534ec490235349fa SHA1 3cdb8356415db377c41d6981c9cd8d1c7714e3a6 SHA256 4e874674a570366793f270a8708ca22fe8388be54bbee9eefc4f4c083cba16ce
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk39oj0ACgkQrnu0mw69JkooCAD7BxwHqHfT1tNF2B6jgj9yVUny
-VdUcqNyVMUlaNosqtJMA/2jkNJRcOdLT5DLYrPGRkOrag4BWYkMt716dLdgWtQNh
-=k/aa
+iF4EAREIAAYFAk7PjSwACgkQiIP6VqMIqNfdEgD/d91Pyisk/b2dlrMIVm+kV+oW
+P9radXUFYOfC3juBLjUA/idTZr17d+ZTjhm/vjsoTTs8CS5k5H4OT7A0Z7BiFjij
+=KRTX
 -----END PGP SIGNATURE-----
