@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*googlecharts-1.6.8 (25 Nov 2011)
+
+  25 Nov 2011; Hans de Graaff <graaff@gentoo.org> +googlecharts-1.6.8.ebuild:
+  Version bump.
+
 *googlecharts-1.6.7 (19 Jun 2011)
 
   19 Jun 2011; Hans de Graaff <graaff@gentoo.org> +googlecharts-1.6.7.ebuild:
